# yougrabr

./: README.md  app.py  db.json  index.html  op.py  pyproject.toml  style.css
static/: style.css
templates/: index.html
