[tool.poetry]
name = "yougrabr"
version = "0.1.0"
description = ""
authors = ["Joacko <joaquinbf@live.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "7.1.1"
Flask = "1.1.1"
itsdangerous = "1.1.0"
Jinja2 = "2.11.1"
MarkupSafe = "1.1.1"
Werkzeug = "1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
